정리 1차